# sequel

./: .gitignore  .gitmodules  LICENSE  README.md  _main_jax.py  _main_pytorch.py  example_jax.py  example_pytorch.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt
configs/: config.yaml
configs/algo/: agem.yaml  der++.yaml  der.yaml  er.yaml  ewc.yaml  icarl.yaml  joint.yaml  kcl.yaml  lamaml.yaml  lfl.yaml  mas.yaml  mcsgd.yaml  naive.yaml  si.yaml  stablesgd.yaml
configs/backbone/: cnn.yaml  mlp.yaml
configs/benchmark/: permutedmnist.yaml  rotatedmnist.yaml  splitcifar10.yaml  splitcifar100.yaml  splitmnist.yaml  tinyimagenet.yaml
configs/examples/: ewc_rotatedmnist.yaml  lamaml_rotatedmnist.yaml  mcsgd_rotatedmnist.yaml  naive_rotatedmnist.yaml
configs/optimizer/: adam.yaml  sgd.yaml
docs/: examples.md  index.md  installation.md  reproducibility.md
docs/algos/: base_algo.md
docs/algos/jax/: agem.md  base_algo.md  der.md  er.md  ewc.md  icarl.md  joint.md  lfl.md  mas.md  mcsgd.md  si.md
docs/benchmarks/: base_benchmark.md  cifar.md  memory.md  mnist.md  tinyimagenet.md  utils.md
sequel/: __init__.py
sequel/algos/: __init__.py  base_algo.py
sequel/backbones/: __init__.py
sequel/benchmarks/: __init__.py  base_benchmark.py  buffer.py  cifar.py  memory.py  mnist.py  tinyimagenet.py  utils.py
sequel/utils/: __init__.py  utils.py
tests/: small_test.py  test_assertions.py  test_backbone_jax.py  test_backbone_pytorch.py  test_benchmarks.py
tests/algorithms/: __init__.py  test_algorithms_fit.py  test_algorithms_init.py
(+95 files in other folders)
